# Toole

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  requirements.txt  runtime_failover_smoke_test.c  toole.spec
core/: Cargo.toml
core/src/: certif.rs  discovery.rs  error.rs  file_certif.rs  lib.rs  main.rs  network.rs  recever.rs  sender.rs  transfer.rs  utils.rs
desktop-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: commands.rs  lib.rs
desktop-app/ui/: index.html  package-lock.json  package.json  tsconfig.json
desktop-app/ui/css/: index.css  style.css
desktop-app/ui/js/: main.js
desktop-app/ui/src/: App.vue  style.css  types.ts  utils.ts  vite-env.d.ts
desktop-app/ui/src/components/: AboutModal.vue  FileDropZone.vue  PeerList.vue  WelcomeHeader.vue
desktop-app/ui/src/stores/: files.ts  peers.ts
docs/: ARCHITECTURE.md  PRD.md  PROTOCOL.md  ROADMAP.md  SECURITY.md  SRS.md  architecture.md  brouillon.md  crypto.md  diagram.md  faisabilite.md  guide_local.md  prd.md  protocol.md  roadmap.md  security.md  srs.md
includes/: app.h  bridge.h  checksum.h  discovery.h  file_transfert.h  network.h  server_runtime.h  states.h
src/UI/: app.py
src/UI/controller/: controller.py
src/UI/screens/: connection.py  transfer.py
src/core/: app.c  bridge.c  main.c
src/platform/UI/: app.py
src/platform/UI/controller/: controller.py
src/platform/UI/screens/: connection.py  popup.py  transfer.py
src/platform/linux/: discovery.c  file_transfert.c  network.c  server_runtime.c
src/platform/windows/: discovery.c  file_transfert.c  network.c  server_runtime.c
src/ui/: app.py  bridge_ctypes.py  theme.py  tmp.txt
src/ui/controller/: controller.py
src/ui/screens/: activity.py  connection.py  popup.py  reception.py  transfer.py
tests/: CMakeLists.txt  discovery_test.c  file_transfer_test.c  network_test.c  server_runtime_test.c
