[package]
name = "toole_core"
version = "0.1.0"
edition = "2021"

[dependencies]
gethostname = "1.1.0"
serde = { version = "1", features = ["derive"] }
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1.52.3", features = ["net", "time", "sync", "macros", "rt-multi-thread"] }
quinn = "0.11.11"
anyhow = "1.0"
rcgen = "0.14.8" 
rustls = { version = "0.23.40", features = ["ring"] }