[package]
name = "toole_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
gethostname = "1.1.0"
quinn = "0.11.11"
rcgen = "0.14.8"
rustls = { version = "0.23.40", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
socket2 = { version = "0.5", features = ["all"] }
tokio = {
  version = "1.52.3",
  features = ["macros", "net", "rt-multi-thread", "sync", "time"]
}
